--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-native": "0.59.9",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.1.0",
+    "react-native-snap-carousel": "^3.8.0",
     "react-native-tab-view": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-native-photo-view": "git+https://git@github.com/ducgao/react-native-photo-view"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
